--- a/app/views/knowledges/_form.html.erb
+++ b/app/views/knowledges/_form.html.erb
@@ -57,7 +57,7 @@
 </div> -->
 
   <div class="form-actions">
-    <%= f.submit "提交", class: "btn btn-primary" %>
+    <%= f.submit "提交", class: "btn btn-info btn-sm" %>
   </div>
 <% end %>
 
