--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .page {
-  margin: 20px 0;
-  padding: 15px;
+  padding: 20px 30px;
+  background-color: white;
+  min-height: 300px;
 }
 
 .left { float: left; }
@@ -32,9 +33,9 @@ h6 { font-size: 13px;  }
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 
-    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(1); /* Google Chrome & Safari 6+ */
+    // filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    // filter: gray; /* IE6-9 */
+    // -webkit-filter: grayscale(1); /* Google Chrome & Safari 6+ */
 
     transition: all .5s;
     -moz-transition: all .5s; /* Firefox 4 */
@@ -42,9 +43,9 @@ h6 { font-size: 13px;  }
     -o-transition: all .5s; /* Opera */
 }
 .profile-card .profile-cover:hover {
-    filter: none;
-    filter: none;
-    -webkit-filter: none;
+    // filter: none;
+    // filter: none;
+    // -webkit-filter: none;
 
 }
 .profile-card .profile-cover .profile-avatar {
