refactor avatar display

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -75,7 +75,10 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown">
+                  <%= display_avatar(current_user, "20x20") %>
+                  <b class="caret"></b>
+                </a>
                 <ul class="dropdown-menu">
                   <% if current_user.admin? %>
                   <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
