--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -48,10 +48,10 @@
               <div class="navbar-form navbar-left" role="search">
                 <%= form_tag search_knowledges_path , :method => :get  do %>
                   <div class="input-group" id="search-id" >
-                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="课程，描述...">
+                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="search">
                     <div class="input-group-btn">
-                      <button class="btn search-button" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
+                      <button class="search-button" type="submit">
+                        <i class="fa fa-2x fa-search"></i>
                       </button>
                     </div>
                   </div>
