user/show page bug

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
               <a class="view-map" href="#"><img src="https://dl.dropboxusercontent.com/s/9ofmihok0h64lvn/location.png"></a>
             </div>
           </div>
-          <%= display_avatar(current_user, "150x150") %>
+          <%= display_avatar(@user, "150x150") %>
         </div>
         <div class="profile-details">
             <h1><%= @user.username %></h1>
