change index knowledge thumb picture to medium

--- a/app/views/knowledges/_knowledge_item.html.erb
+++ b/app/views/knowledges/_knowledge_item.html.erb
@@ -4,7 +4,7 @@
       <div class="knowledge">
         <div class="knowledge-cover">
           <% if knowledge.photos.present? %>
-            <%= image_tag(knowledge.photos[0].image.thumb.url, class: 'thumbnail') %>
+            <%= image_tag(knowledge.photos[0].image.medium.url, class: 'thumbnail') %>
           <% else %>
             <%= image_tag("http://via.placeholder.com/250/87CEFA/ffffff?&text=#{knowledge.title}", class: 'thumbnail') %>
           <% end %>
