change knowledge item like to bookmark

--- a/app/views/knowledges/_knowledge_item.html.erb
+++ b/app/views/knowledges/_knowledge_item.html.erb
@@ -13,7 +13,7 @@
           <%= link_to(knowledge.title, knowledge_path(knowledge)) %>
         </div>
         <div class="knowledge-info">
-          <span class="icon"><i class="fa fa-heart-o" aria-hidden="true"></i></span><small><%= knowledge.likes_count %></small>
+          <span class="icon"><i class="fa fa-bookmark-o" aria-hidden="true"></i></span><small><%= knowledge.marks_count %></small>
         </div>
       </div>
     <% end %>
