--- a/app/views/knowledges/_show_header.html.erb
+++ b/app/views/knowledges/_show_header.html.erb
@@ -27,3 +27,27 @@
     </li>
   </ul>
 </section>
+
+<%= content_for :page_javascript do %>
+
+<script>
+ $(".raty").raty({
+   path: '/images/',
+   readOnly:  true,
+   score: function() { return $(this).data('score'); },
+   click: function(score) {
+     var that = this;
+     $.ajax({
+       url: $(this).data("score-url"),
+       method: "POST",
+       data: { score: score },
+       dataType: "json",
+       success: function(data){
+         $(that).closest(".rate").find(".average-score").html( data["average_score"] );
+       }
+     })
+   }
+ });
+</script>
+
+<% end %>
