--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= yield %>
       <%= render "common/footer" %>
       <%= javascript_include_tag 'application' %>
+      <script src="http://cdn.bootcss.com/Readmore.js/2.2.0/readmore.min.js"></script>
       <!-- <script src="http://cdn.bootcss.com/masonry/4.2.0/masonry.pkgd.min.js"></script> -->
       <%= yield :page_javascript %>
   </body>
