--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -29,4 +29,12 @@
   <script>
     $("#knowledge-question").addClass("active");
   </script>
+  <script>
+    $('article').readmore({
+      embedCSS: false,
+      speed: 75,
+      moreLink: '<a href="#" class="more">展开全文</a>',
+      lessLink: '<a href="#" class="less">收起全文</a>',
+    });
+  </script>
 <% end %>
