--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,23 +1,23 @@
-<div id="comment-<%= comment.id %>" class="panel panel-default">
-  <div class="panel-heading">
-    <%= comment.user.username %>
+<article id="comment-<%= comment.id %>">
+  <div class="article-heading">
+    <span><%= display_avatar(comment.user, "35x35", "img-circle")%> <%= link_to comment.user.username, user_path(comment.user) %> <b>评论说：</b>
     <div style="float:right">
       <% if current_user && current_user.find_action(:like, target: review) %>
-        <span id="comment-<%= comment.id %>-like">
-          <%= link_to unlike_comment_path(comment), method: :post, remote: true do  %>
-            <i class="fa fa-heart" aria-hidden="true"></i>(<%= comment.reload.likes_count %>)
+        <span id="comment-<%= comment.id %>-like" class='like'>
+          <%= link_to unlike_comment_path(comment), method: :post, remote: true, class: "liked" do  %>
+            <i class="fa fa-heart" aria-hidden="true"></i> <%= comment.reload.likes_count %>
           <% end %>
         </span>
       <% else %>
-        <span id="comment-<%= comment.id %>-like">
+        <span id="comment-<%= comment.id %>-like" class='like'>
           <%= link_to like_comment_path(comment), method: :post, remote: true do  %>
-            <i class="fa fa-heart-o" aria-hidden="true"></i>(<%= comment.reload.likes_count %>)
+            <i class="fa fa-heart-o" aria-hidden="true"></i> <%= comment.reload.likes_count %>
           <% end %>
         </span>
       <% end %>
     </div>
   </div>
-  <div class="panel-body">
+  <div class="article-body">
     <%= sanitize comment.content %>
     <% if current_user && comment.user == current_user %>
       <p class="text-right">
@@ -26,4 +26,4 @@
       </p>
     <% end %>
   </div>
-</div>
+</article>
