--- a/app/views/reviews/_review_item.html.erb
+++ b/app/views/reviews/_review_item.html.erb
@@ -1,6 +1,6 @@
 <article>
   <div class="article-heading">
-    来自 <%= link_to review.user.username, user_path(review.user) %>的  <b>评测</b>：
+    来自 <span><%= display_avatar(review.user, "35x35", "img-circle")%> <%= link_to review.user.username, user_path(review.user) %> 的<b>评测</b>：
   </div>
   <div class="article-body">
     <div class="text-center">
