--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -49,9 +49,7 @@
     <section>
       <h4 id="comment-count">共有 <%= @review.comments_count %> 条评论</h4>
       <div id="comment-list">
-        <% @comments.each do |comment| %>
-          <%= render :partial => "comments/comment", :locals => { :review => @review, :comment => comment } %>
-        <% end %>
+        <%= render partial: 'comments/comment', :locals => { :review => @review }, :collection => @comments, :as => :comment %>
       </div>
     </section>
 
