add margin to review/question show page

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -35,6 +35,10 @@
        <%= render partial: 'anwsers/anwser', :locals => { :question => @question }, :collection => @question.anwsers, :as => :anwser %>
      </div>
     </section>
+
+    <section class="section-footer">
+      
+    </section>
   </main>
 </div>
 
