--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -161,7 +161,8 @@ main {
     border-radius: 0 0 10px 10px;
   }
   .section-footer {
-    margin: 0 0 2em 0;
+    margin: 0em 0 2em 0;
+    padding-top: 1em;
     text-align: center;
     a { color: #333; font-weight: 400;}
   }
